[package]
name = "agent-swap"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An intelligent swap agent built on Gloom for Solana"
repository = "https://github.com/yourusername/agent-swap"
license = "MIT"
keywords = ["solana", "defi", "trading", "ai", "gloom"]
categories = ["finance", "cryptocurrency"]

[dependencies]
# Core dependencies
gloom = { git = "https://github.com/gloom/gloom" }
solana-sdk = "1.17"
solana-client = "1.17"
solana-program = "1.17"

# Anchor framework
anchor-lang = "0.28"
anchor-client = "0.28"
anchor-spl = "0.28"

# DEX integrations
raydium-contract = "0.1"
orca-whirlpool = "0.1"

# Async runtime
tokio = { version = "1.32", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
base64 = "0.21"
bincode = "1.3"
bytemuck = { version = "1.14", features = ["derive"] }
futures = "0.3"

[dev-dependencies]
# Testing
tokio-test = "0.4"
pretty_assertions = "1.4"
solana-test-validator = "1.17"

[features]
default = ["mainnet"]
mainnet = []
devnet = []
testnet = []

# Enable additional debugging
debug = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = [
    ".",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]